--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,13 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".activities.ViewStudentActivity"
-            android:label="Edit Student Details"
+            android:label="View Student Details"
             android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activities.EditStudentActivity"
+            android:label="Edit Student Details"
+            android:parentActivityName=".activities.ViewStudentActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
